public/css/main.css
h1, h2, h3, h4, p, ul, a, input, label, button{
	font-family: 'Quicksand', serif !important;
}
html{
	overflow-x: hidden;
}
body {
  margin: 0px;
  padding: 0px;
}
#appname{
	color: #00a79d;
}
/* jquery 3 hack fix */
.bootstrap-datetimepicker-widget {
  display: block;
}

/* IMG */
img[src=""] {
    display: none;
}

/* IMG END *

/* FOOTER */
.footer {
   /*background-color: #33a0aa;*/
	 background-color: #f5f8fa;
   line-height: 20px;
	 /*color: black;*/
	 padding: 80px 0 50px;
 	 margin-bottom: -30px;
}
.footer-section{
	width: 100%;
}
.colstyle{
	margin-left: 45px;
}
.footer-col a{
	padding-left: 5px;
}
.footer-bottom .foot-social{
	text-align: right;
}
.footer-bottom .navi ul {
    text-align: center;
    line-height: normal;
}
.footer li {
    margin-bottom: 6px;
    line-height: 25px;
    /*color: #fff;*/
}
.navi >ul >li {
    position: relative;
    display: inline-block;
    float: left;
    list-style: none;
    overflow: hidden;
}
.footer a, .footer-bottom .navi a, .footer-bottom .foot-social p a {
    /*color: #FFFFFF;*/
}
.footer-bottom .navi li {
		padding-right: 20px;
    margin: 0;
    font-weight: 400;
    text-transform: inherit;
    text-align: center;
}
.navi ul {
  line-height: inherit;
  margin: 0;
  font-weight: 400;
  text-transform: inherit;
  text-align: inherit;
}
.footer-bottom{
	/*background-color: #33a0aa;*/
	/*border-top: 1px solid #33a0aa;*/
	width: 100%;
	line-height: 20px;
	padding: 30px 0;
	/*color: white;*/
}
/* FOOTER END */

/* NAV BAR */
.navbar{
  margin-bottom: inherit;
  border: none;
	background-color: #fff;
}
.nav>li>a{
	color: #9d9d9d;
	margin-right: 30px;
	font-weight: 500;
}
.navbar-default .navbar-brand{
	font-weight: bold;
	font-size: 22px;
}

.navbar-inverse{
  background-color: #f9fbfc;
}

/*.navbar-default .navbar-nav>li>a, .navbar-default .navbar-text{

}
.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover{
	background-color: #33a0aa;
}*/

/*.navbar-inverse .navbar-nav>li>a:focus, .navbar-inverse .navbar-nav>li>a:hover{
  color: black;
}*/
/* NAV BAR END */


/* modal */

.modal-backdrop{
  z-index: 900;
}

.modal-open .modal{
  overflow-y: scroll !important;
}
/* MODAL END */

/* Btns */

.btn-group-lg>.btn, .btn-lg{
	margin-top: 2px;
  margin-right: 10px;
  font-weight: 500;
}

/*#reg-btn{
	color: white;
}
#login-btn{
	color: white;
}*/
.btn-info{
	color: white;
	border-color: #777;
}

/* BTNS END */
/* Pages */
.sticky {
  position: fixed;
  top: 0;
  width: 100%;
}
/* End Pages */
/* property */
#property-listings{
	height: 835px;
}
/* PROPERTY END */

/* splash section */
.splash-title{
	text-align: center;
	color: white;
	position: relative;
	top: 200px;
}
#listings-row{
	margin-right: -28px;
}
#listings-row .filter-panel{
	width: 850px;
	margin: auto;
}
.filter-panel{
	text-align: center;
}
#filter-panel-home{
	position: relative;
	width: 85%;
	top: 40%;
}
#home-container div {
    margin: 0 auto;
}
.splash-section .splash-inner-content{
	position: relative;
	z-index: 3;
}
.splash-section .splash-inner-media {
	opacity: 0.6;
	background-attachment: fixed;
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
	/*height: 800px;*/
	position: absolute;
  left: 0;
  right: 0;
  top: 0;
  width: 100%;
  height: 100%!important;
  z-index: 1;
}
.splash-section #front-page-media{
		background-image: url(/images/living-7.jpg);
}
.splash-section #about-media{
		background-image: url(/images/dining-6-min.jpg);
}
.splash-section #blogs-media{
		background-image: url(/images/living-2-min.jpg);
}
.splash-section #home-owners-media{
		background-image: url(/images/living-3-min.jpg);
}
.splash-section #home-buyers-media{
		background-image: url(/images/living-2-min.jpg);
}
.splash-section #services-media{
		background-image: url(/images/dining-6-min.jpg);
}
.splash-section{
	background: #000;
	position: relative;
  width: 100%;
	/*animation:fading 3s ease-in;
	-webkit-animation:fading 3s ease-in;
	*/
}
/* SPLASH END */

/* map */
#showmap .gm-iv-address{
	height: 55px;
}
#map{
	height: 880px;
	width: 900px;
}
#moveloc #autocomplete{
	background-color: #fff;
  font-family: Roboto;
  font-size: 15px;
  font-weight: 300;
  margin-left: 12px;
  padding: 0 11px 0 13px;
  text-overflow: ellipsis;
  width: 400px;
}
/* MAP END */


/* Animation */

/* Pulse */
@-webkit-keyframes hvr-pulse {
  25% {
    -webkit-transform: scale(1.1);
    transform: scale(1.1);
  }
  75% {
    -webkit-transform: scale(0.9);
    transform: scale(0.9);
  }
}
@keyframes hvr-pulse {
  25% {
    -webkit-transform: scale(1.1);
    transform: scale(1.1);
  }
  75% {
    -webkit-transform: scale(0.9);
    transform: scale(0.9);
  }
}
/*@-webkit-keyframes fading{
 0%{opacity:0}
 50%{opacity:0.5}
 100%{opacity:1}
}
@keyframes fading{
 0%{opacity:0}
 50%{opacity:0.5}
 100%{opacity:1}
}*/

/* ANIMATION END */

/* NAV SIDE BAR */
.nav-side-menu {
  overflow: auto;
  font-family: verdana;
  font-size: 12px;
  font-weight: 200;
  background-color: #2e353d;
  /*position: fixed;*/
  top: 0px;
  width: 300px;
  height: 100%;
  color: #e1ffff;
}
.nav-side-menu .brand {
  background-color: #23282e;
  line-height: 50px;
  display: block;
  text-align: center;
  font-size: 14px;
}
.nav-side-menu .toggle-btn {
  display: none;
}
.nav-side-menu ul,
.nav-side-menu li {
  list-style: none;
  padding: 0px;
  margin: 0px;
  line-height: 35px;
  cursor: pointer;
  /*
    .collapsed{
       .arrow:before{
                 font-family: FontAwesome;
                 content: "\f053";
                 display: inline-block;
                 padding-left:10px;
                 padding-right: 10px;
                 vertical-align: middle;
                 float:right;
            }
     }
*/
}
/* ... */

